# go2-convex-mpc

./: .gitignore  README.md  environment.yml
convex_mpc/cpp/: centroidal_mpc_acados.hpp
convex_mpc/python/: go2_robot_data.py  mujoco_model.py  plot_helper.py  test_MPC.py
examples/: ex00_demo.py  ex01_trot_in_place.py  ex02_trot_forward.py  ex03_trot_sideway.py  ex04_trot_rotation.py
simpleMPC/: centroidal_mpc.py  dynamics.py  gait.py  go2_model.py  go2_robot_data.py  leg_controller.py  plot_helper.py  reference_trajectory.py  robot_state.py  test_MPC.py
src/convex_mpc/cpp/: CMakeLists.txt  centroidal_mpc_acados.cpp  environment.yml  go2_pinocchio_model.hpp  main.cpp
src/convex_mpc/cpp/c_generated_code/centroidal_mpc_hpipm/: CMakeLists.txt  Makefile  acados_solver.pxd  acados_solver_centroidal_mpc_hpipm.c  acados_solver_centroidal_mpc_hpipm.h  centroidal_mpc_hpipm.json  main_centroidal_mpc_hpipm.c
src/convex_mpc/cpp/c_generated_code/centroidal_mpc_hpipm/centroidal_mpc_hpipm_model/: centroidal_mpc_hpipm_dyn_disc_phi_fun.c  centroidal_mpc_hpipm_dyn_disc_phi_fun_jac.c  centroidal_mpc_hpipm_model.h
src/convex_mpc/cpp/scripts/: generate_mpc_solver.py
src/convex_mpc/python/: leg_controller.py
src/python/convex_mpc_go2/: api.py  centroidal_mpc.py  gait.py  test_MPC _beta.py  test_MPC.py
src/simpleMPC/: dynamics.py  main.py
